# cookiecutter-faust

./: README.md  cookiecutter.json
{{ cookiecutter.project_name | slugify(separator='_') }}_{{cookiecutter.app_name}}/: .gitignore  LICENSE.md  dev-requirements.txt  requirements.txt  setup.py  update_docs.sh
{{ cookiecutter.project_name | slugify(separator='_') }}_{{cookiecutter.app_name}}/docs/source/: conf.py
{{ cookiecutter.project_name | slugify(separator='_') }}_{{cookiecutter.app_name}}/tests/: test_sample.py
{{ cookiecutter.project_name | slugify(separator='_') }}_{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/: __main__.py
{{cookiecutter.app_name}}/: LICENSE.md  README.md  dev-requirements.txt  setup.cfg  setup.py  update_docs.sh
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/: app.py
{{cookiecutter.short_name}}{{cookiecutter.app_name}}/: LICENSE.md  README.md  requirements.txt  setup.cfg  setup.py
