[bdist_wheel]
universal=1

[metadata]
description-file=README.md

{%- if cookiecutter.version_scheme == 'SemVer' %}
[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:README.md]

[bumpversion:file:{{ cookiecutter.app_name }}/__init__.py]
{%- else %}
[pycalver]
current_version = "{{ cookiecutter.version }}"
version_pattern = "{pycalver}"
commit = True
tag = True
push = False

[pycalver:file_patterns]
setup.cfg =
    current_version = "{version}"
setup.py =
    __version__ = "{version}"
{{ cookiecutter.app_name }}/__init__.py =
    __version__ = "{version}"
README.md =
    version number: {version}
{% endif %}
